--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Two Numbers</title>
+    <title>Attendance | CGPA</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
