--- a/cgpa.html
+++ b/cgpa.html
@@ -13,7 +13,7 @@
         <button onclick="generate()">Submit</button>
         <p id="result">Enter the Current semester above!</p>
         <div id="semContainer"></div>
-        <div class="back"><a class="back" href="home.html">Back</a></div>
+        <div class="back"><a class="back" href="index.html">Back</a></div>
 
     </div>
     <script src="scriptcgpa.js"></script>
