--- a/att.html
+++ b/att.html
@@ -12,7 +12,7 @@
         <input type="number" id="credits" placeholder="Enter Total Credits">
         <button onclick="bunk()">Submit</button>
         <p id="result">Enter the Total Credits above ! </p>
-        <div class="back"><a class="back" href="home.html">Back</a></div>
+        <div class="back"><a class="back" href="index.html">Back</a></div>
 
     </div>
 
